--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -12,7 +12,7 @@ bind C-Space send-prefix
 bind -n C-t new-window
 # tried to bind C-w as kill-window but ctrl-backspace sends it and instead of deleting word, nukes window
 bind -n C-x kill-pane
-bind-key -n C-d detach
+bind-key -n C-S-d detach
 # Shift arrow to switch windows
 bind -n C-S-Left  previous-window
 bind -n C-S-Right next-window
@@ -52,6 +52,7 @@ set -g @catppuccin_status_connect_separator "no"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 
