Adjustments as I've been using them

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -11,7 +11,7 @@ bind C-Space send-prefix
 # naviation bindings
 bind -n C-t new-window
 # tried to bind C-w as kill-window but ctrl-backspace sends it and instead of deleting word, nukes window
-bind -n C-x kill-pane
+bind -n C-S-x kill-pane
 bind-key -n C-S-d detach
 # Shift arrow to switch windows
 bind -n C-S-Left  previous-window
@@ -34,14 +34,14 @@ set -sg escape-time 10
 
 # theme 
 set -g @catppuccin_flavour 'macchiato' 
-set -g @catppuccin_window_left_separator "█"
-set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_left_separator " █"
+set -g @catppuccin_window_right_separator "█ "
 set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator "  █"
+set -g @catppuccin_window_middle_separator "  █"
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_current_fill "number"
-# set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_status_modules_right "directory session date_time"
+set -g @catppuccin_window_current_text "#{b:pane_current_path}"
+set -g @catppuccin_status_modules_right "directory host application session date_time"
 set -g @catppuccin_status_left_separator  ""
 set -g @catppuccin_status_right_separator " "
 set -g @catppuccin_status_right_separator_inverse "yes"
