--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,5 +1,5 @@
 font:
-  size: 16
+  size: 14
   offset:
     y: 16
   glyph_offset:
@@ -24,11 +24,17 @@ env:
   TERM: xterm-256color
 
 scrolling:
-  history: 2000
+  history: 10000
   auto_scroll: true
 
 key_bindings:
   -  { key: Back,      mods: Control,                    chars: "\u0017"        }
+  - { key: Left,     mods: Alt,     chars: "\x1bb"                       } # Skip word left
+  - { key: Right,    mods: Alt,     chars: "\x1bf"                       } # Skip word right
+  - { key: Left,     mods: Command, chars: "\x1bOH",   mode: AppCursor   } # Home
+  - { key: Right,    mods: Command, chars: "\x1bOF",   mode: AppCursor   } # End
+  - { key: Back,     mods: Command, chars: "\x15"                        } # Delete line
+  - { key: Back,     mods: Alt,     chars: "\x1b\x7f"                    } # Delete word
 
 #######################################
 ##      START OF COLOR SCHEMES       ##
