Add copilot and other adustments

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -9,10 +9,10 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 # naviation bindings
-bind -n C-t new-window
+# bind -n C-t new-window
 # tried to bind C-w as kill-window but ctrl-backspace sends it and instead of deleting word, nukes window
-bind -n C-S-x kill-pane
-bind-key -n C-S-d detach
+# bind -n C-S-x kill-pane
+# bind-key -n C-S-d detach
 # Shift arrow to switch windows
 bind -n C-S-Left  previous-window
 bind -n C-S-Right next-window
