--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -17,8 +17,8 @@ window:
 
 cursor:
   unfocused_hollow: true
-  style:
-    blinking: Never
+  # style:
+  #   blinking: Never
 
 env:
   TERM: xterm-256color
@@ -35,6 +35,8 @@ key_bindings:
   - { key: Right,    mods: Command, chars: "\x1bOF",   mode: AppCursor   } # End
   - { key: Back,     mods: Command, chars: "\x15"                        } # Delete line
   - { key: Back,     mods: Alt,     chars: "\x1b\x7f"                    } # Delete word
+  - { key: J,         mods: Alt,       chars: "\x1bj"                       }
+  - { key: K,         mods: Alt,       chars: "\x1bk"                       }
 
 #######################################
 ##      START OF COLOR SCHEMES       ##
