--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,9 +1,9 @@
 font:
-  size: 14
+  size: 13
   offset:
-    y: 16
+    y: 5
   glyph_offset:
-    y: 9
+    y: 1
   normal:
     family: "MesloLGS NF"
 window:
@@ -15,10 +15,12 @@ window:
     lines: 30
   opacity: 0.98
 
+# use_thin_strokes: true
+  
 cursor:
   unfocused_hollow: true
-  # style:
-  #   blinking: Never
+  style:
+    blinking: Never
 
 env:
   TERM: xterm-256color
@@ -28,15 +30,18 @@ scrolling:
   auto_scroll: true
 
 key_bindings:
-  -  { key: Back,      mods: Control,                    chars: "\u0017"        }
-  - { key: Left,     mods: Alt,     chars: "\x1bb"                       } # Skip word left
-  - { key: Right,    mods: Alt,     chars: "\x1bf"                       } # Skip word right
-  - { key: Left,     mods: Command, chars: "\x1bOH",   mode: AppCursor   } # Home
-  - { key: Right,    mods: Command, chars: "\x1bOF",   mode: AppCursor   } # End
-  - { key: Back,     mods: Command, chars: "\x15"                        } # Delete line
-  - { key: Back,     mods: Alt,     chars: "\x1b\x7f"                    } # Delete word
-  - { key: J,         mods: Alt,       chars: "\x1bj"                       }
-  - { key: K,         mods: Alt,       chars: "\x1bk"                       }
+  -  { key: Back,    mods: Control,                    chars: "\u0017"        }
+  - { key: Left,     mods: Alt,       chars: "\x1bb"                       } # Skip word left
+  - { key: Right,    mods: Alt,       chars: "\x1bf"                       } # Skip word right
+  - { key: Left,     mods: Command,   chars: "\x1bOH",   mode: AppCursor   } # Home
+  - { key: Right,    mods: Command,   chars: "\x1bOF",   mode: AppCursor   } # End
+  - { key: Back,     mods: Command,   chars: "\x15"                        } # Delete line
+  - { key: Back,     mods: Alt,       chars: "\x1b\x7f"                    } # Delete word
+  - { key: J,        mods: Alt,       chars: "\x1bj"                       }
+  - { key: K,        mods: Alt,       chars: "\x1bk"                       }
+  - { key: F,        mods: Alt,       chars: "\x1bf"                       }
+  - { key: G,        mods: Alt,       chars: "\x1bg"                       }
+  - { key: H,        mods: Alt,       chars: "\x1bh"                       }
 
 #######################################
 ##      START OF COLOR SCHEMES       ##
