--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -26,8 +26,10 @@ bind-key -T copy-mode-vi v send -X begin-selection # start selecting text with "
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
-
-
+bind -n C-f copy-mode \; command-prompt -i -p "(search up)" "send -X search-backward-incremental \"%%%\""
+bind -T copy-mode-vi C-f copy-mode \; command-prompt -i -p "(search up)" "send -X search-backward-incremental \"%%%\""
+bind -T copy-mode-vi C-g send -X search-again # or n
+bind -T copy-mode-vi C-h send -X search-reverse # or N
 
 # remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 10
