chore: home folder for files that go in ~, update tmux theme for new version

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -2,6 +2,7 @@ set-option -sa terminal-overrides ",xterm*:Tc"
 
 set -g mouse on
 setw -g xterm-keys on
+set -g default-terminal "tmux-256color"
 
 # use ctrl-space as command key
 unbind C-b
@@ -34,29 +35,26 @@ bind -T copy-mode-vi C-h send -X search-reverse # or N
 # remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 10
 
-# theme 
-set -g @catppuccin_flavour 'macchiato' 
-set -g @catppuccin_window_left_separator " █"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator "  █"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_current_fill "number"
+# theme (must set @catppuchcin_ vars before run)
+set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_window_text "#{b:pane_current_path}"
 set -g @catppuccin_window_current_text "#{b:pane_current_path}"
-set -g @catppuccin_status_modules_right "directory host application session date_time"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "yes"
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "no"
-# set -g @catppuccin_directory_text "#{pane_current_path}"
+
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left "" # session name by default
+set -g status-right "#{E:@catppuccin_status_directory}#{E:@catppuccin_status_host}#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}#{E:@catppuccin_status_date_time}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
